frontend/src/assets/css/Store.css
/* ... */
.product-sidebar,
.profile-grid {
  margin-bottom: 30px;
}

@media (max-width: 991px) {
  .profile-grid,
  .product-grid {
    margin-top: 30px;
  }
}

@media (max-width: 1200px) {
  .product-filter {
    min-width: 350px;
    max-width: 100%;
  }
}

@media (min-width: 1200px) {
  .product-filter {
    min-width: 310px;
    max-width: 100%;
  }
}

@media only screen and (min-width: 768px) and (max-width: 991px),
  (max-width: 767px) {
  .footer .footer-bottom .copyright {
    margin-bottom: 12px;
  }
}

#sorting {
  max-width: 200px;
}

.sort-element {
  margin-right: 10px;
}

/*======================================
    Qauntity CSS
========================================*/

.quantity-control {
  border-radius: 4px;
  padding: 10px;
  font-size: 14px;
  font-weight: 500;
  border: 1px solid #e1e1e1;
  height: 45px;
}

.quantity-btn {
  background: transparent;
  border: none;
  outline: none;
  margin: 0;
  padding: 0px 8px;
  cursor: pointer;
}

.quantity-btn svg {
  width: 10px;
  height: 15px;
}

.quantity-input {
  color: #424242;
  outline: none;
  text-align: center;
  width: 45px;
  align-items: center;
  justify-content: center;
  background: transparent;
  border: none;
}
.quantity-input::-webkit-inner-spin-button,
.quantity-input::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

@media (min-width: 768px) and (max-width: 991px) {
  .cart {
    height: 90px;
  }
}

/*======================================
    Spinner CSS
========================================*/

.loading {
  position: fixed;
  z-index: 999;
  overflow: show;
  margin: auto;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  width: 50px;
  height: 50px;
}

.loading:before {
  content: "";
  display: block;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

@keyframes spinner {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}
.loading-spinner {
  width: 50px;
  height: 50px;
  border: 10px solid #f3f3f3; 
  border-top: 10px solid #f44336;
  border-radius: 50%;
  animation: spinner 1.5s linear infinite;
}

.spinner-container {
  display: grid;
  justify-content: center;
  align-items: center;
  height: 350px;
}

/*======================================
    Team CSS
========================================*/

/* .team {
} */

.team .single-team {
  text-align: center;
  margin-top: 30px;
  border: 1px solid #e6e6e6;
  border-radius: 4px;
  padding: 35px;
  -webkit-transition: all 0.4s ease;
  transition: all 0.4s ease;
  background-color: #fff;
}

.team .single-team:hover {
  -webkit-box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.123);
  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.123);
}

.team .single-team .image img {
  height: 150px;
  width: 150px;
  border-radius: 50%;
  border: 1px solid #e6e6e6;
  display: inline-block;
  padding: 5px;
}

.team .single-team .content {
  margin-top: 20px;
}

.team .single-team .content h3 {
  color: #777;
  font-size: 16px;
}

.team .single-team .content h5 {
  font-size: 13px;
  margin-top: 5px;
  color: #666;
}

.team .single-team .content .social {
  margin-top: 20px;
}

.team .single-team .content .social li {
  display: inline-block;
  margin-right: 4px;
}

.team .single-team .content .social li:last-child {
  margin: 0;
}

.team .single-team .content .social li a {
  height: 35px;
  width: 35px;
  line-height: 32px;
  text-align: center;
  border: 1px solid #e6e6e6;
  color: #444;
  border-radius: 50%;
  font-size: 14px;
}

.team .single-team .content .social li a:hover {
  border-color: transparent;
  color: #fff;
  background-color: #f44336;
}

/*======================================
  Cart CSS
========================================*/
.cart-list-head {
  border-radius: 4px;
  overflow: hidden;
  border: 1px solid #e6e6e6;
}

.cart-list-title {
  background-color: #fff;
  padding: 18px 20px;
  border-bottom: 1px solid #e6e6e6;
}

@media (max-width: 767px) {
  .cart-list-title {
    text-align: center;
  }
}

.cart-list-title p {
  color: #424242;
  font-weight: 500;
  font-size: 14px;
}

@media (max-width: 767px) {
  .cart-list-title p {
    padding: 2px 0;
  }
}

.cart-single-list {
  border: 1px solid #e6e6e6;
}

@media (max-width: 767px) {
  .cart-single-list {
    text-align: center;
  }
}

@media (max-width: 767px) {
  .cart-single-list a img {
    width: 50%;
    margin-bottom: 10px;
  }
}

.cart-single-list .add-item {
  color: #fff;
  background-color: #424242;
  font-size: 14px;
  height: 25px;
  width: 25px;
  line-height: 20px;
  border-radius: 50%;
  text-align: center;
  border: none;
}

.cart-single-list .empty {
  color: #fff;
  background-color: #9e9e9e;
  font-size: 14px;
  height: 25px;
  width: 25px;
  line-height: 20px;
  border-radius: 50%;
  text-align: center;
  border: none;
}
/* 
@media (max-width: 767px) {
  .cart-single-list .add-item {
    margin-top: 5px;
  }
} */

.cart-single-list .add-item:hover {
  color: #fff;
  background-color: #212121;
}

.cart-single-list .remove-item {
  color: #fff;
  background-color: #f44336;
  font-size: 12px;
  height: 25px;
  width: 25px;
  line-height: 20px;
  border-radius: 50%;
  text-align: center;
  border: none;
}

@media (max-width: 767px) {
  .cart-single-list .remove-item {
    margin-top: 5px;
  }

  .cart-single-list .product-des span {
    font-size: 13px;
    font-weight: 500;
    display: flex;
    justify-content: center;
    text-align: center;
  }
}

.cart-single-list .remove-item:hover {
  color: #fff;
  background-color: #b71c1c;
}

.cart-single-list .product-name {
  line-height: 22px;
}

@media (min-width: 992px) and (max-width: 1199px) {
  .items-sold {
    display: none;
  }

  .title .product-name {
    font-size: 14px;
  }
}

.cart-single-list .product-name a {
  font-size: 14px;
  color: #424242;
  font-weight: 500;
}

.cart-single-list .product-des {
  display: block;
}

.cart-single-list .product-des span {
  font-size: 13px;
  font-weight: 500;
  display: block;
}
/* ... */

